--- a/SRC/Usuario/Vista/CSS/estilo_asesores.css
+++ b/SRC/Usuario/Vista/CSS/estilo_asesores.css
@@ -5,6 +5,7 @@ body{
     overflow-x: hidden;
 }
 .row {
+    margin-top: 0;
     margin-bottom: 4%; 
 }
 .card{
@@ -14,8 +15,8 @@ body{
     aspect-ratio: 0.7;
     color: #fff;
     perspective: 50rem;
-    margin-left: 10rem;
-    margin-top: 10rem;
+    margin-left: 5rem;
+    margin-top: 3rem;
     transition: 1s ease;
     animation: slideUp 1s ease-out;
     animation-fill-mode: forwards;
