--- a/app/admin/vista/CSS/estilo-principal.css
+++ b/app/admin/vista/CSS/estilo-principal.css
@@ -14,6 +14,7 @@
     --color-primary-variant: #111e88;
     --color-dark-variant: #677483;
     --color-background: #f6f6f9;
+    --color-modal: #9f9d9d;
     --blue: #ffffff;
     --white: #fff;
     --gray: #f5f5f5;
@@ -30,6 +31,82 @@
 
     /* Definición de sombra de caja */
     --box-shadow: 0 2rem 3rem var(--color-light);
+}
+
+/* Modal Sign Up */
+.modal {
+    display: none;
+}
+.modal-content {
+    background-color: var(--color-background);
+    padding: 20px;
+    border-radius: 5px;
+    max-width: 500px;
+    margin: auto;
+    color: var(--color-dark);
+}
+.close {
+    font-size: 30px;
+}
+
+.modal-content form {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-content label {
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.modal-content input[type="text"],
+.modal-content input[type="email"],
+.modal-content input[type="password"] {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid var(--color-dark);
+    color: var(--color-dark);
+    background-color: var(--color-info-light);
+}
+
+.modal-content input[type="submit"] {
+    color: var(--color-h2);
+    padding: 15px 20px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0px 0px 0px 2px var(--color-primary) inset;
+}
+
+.modal-content input[type="submit"]:hover {
+    background-color: var(--color-primary);
+    color: var(--color-white);
+}
+
+
+/* variante a tema oscuro */
+.dark-theme-variables .modal-content {
+    background-color: var(--color-modal);
+    color: var(--color-dark);
+}
+
+.dark-theme-variables .modal-content input[type="text"],
+.dark-theme-variables .modal-content input[type="email"],
+.dark-theme-variables .modal-content input[type="password"] {
+    background-color: var(--color-dark);
+    color: var(--color-white);
+    border: 1px solid var(--color-dark-variant);
+}
+
+.dark-theme-variables .modal-content input[type="submit"] {
+    color: var(--color-h2);
+    box-shadow: 0px 0px 0px 2px var(--color-h2) inset;
+}
+
+.dark-theme-variables .modal-content input[type="submit"]:hover {
+    background-color: var(--color-h2);
+    color: var(--color-white);
 }
 /* Default */
 .theme {
