--- a/app/users/Vista/CSS/estilo-propiedades.css
+++ b/app/users/Vista/CSS/estilo-propiedades.css
@@ -175,3 +175,94 @@ footer .container .row .col-12 .redes a {
     margin-right: 0 !important;
   }
 }
+
+
+
+/*Estilos de las cards */
+.card {
+  --bg-card: #27272a;
+  --primary: #0066FF;
+  --primary-800: #4c1d95;
+  --primary-shadow: #2e1065;
+  --light: #d9d9d9;
+  --zinc-800: #18181b;
+  --bg-linear: linear-gradient(0deg, var(--primary) 50%, var(--light) 125%);
+
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+
+  padding: 1rem;
+  width: 20rem;
+  background-color: var(--bg-card);
+
+  border-radius: 1rem;
+}
+.image_container {
+  overflow: hidden;
+  cursor: pointer;
+
+  position: relative;
+  z-index: 5;
+
+  width: 100%;
+  height: 18rem;
+  background-color: var(--primary-800);
+
+  border-radius: 0.5rem;
+}
+
+
+
+.title {
+  overflow: clip;
+
+  width: 100%;
+
+  font-size: 1rem;
+  font-weight: 600;
+  color: var(--bg-card);
+  text-transform: capitalize;
+  text-wrap: nowrap;
+  text-overflow: ellipsis;
+}
+
+.location, .status, .price {
+  font-size: 0.75rem;
+  color: var(--bg-card);
+}
+.action {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.price {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: var(--bg-card);
+}
+
+.details-button {
+  cursor: pointer;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.25rem;
+
+  padding: 0.5rem;
+  width: 100%;
+  background-image: var(--bg-linear);
+
+  font-size: 0.75rem;
+  font-weight: 500;
+  color: var(--light);
+  text-wrap: nowrap;
+
+  border: 2px solid hsla(262, 83%, 58%, 0.5);
+  border-radius: 0.5rem;
+  box-shadow: inset 0 0 0.25rem 1px var(--light);
+}
