--- a/app/users/Vista/CSS/estilo-propiedades.css
+++ b/app/users/Vista/CSS/estilo-propiedades.css
@@ -178,6 +178,8 @@ footer .container .row .col-12 .redes a {
 
 
 
+
+
 /*Estilos de las cards */
 .card {
   --bg-card: #27272a;
@@ -187,40 +189,42 @@ footer .container .row .col-12 .redes a {
   --light: #d9d9d9;
   --zinc-800: #18181b;
   --bg-linear: linear-gradient(0deg, var(--primary) 50%, var(--light) 125%);
-
   position: relative;
-
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
-
   padding: 1rem;
-  width: 20rem;
   background-color: var(--bg-card);
-
   border-radius: 1rem;
 }
+
 .image_container {
   overflow: hidden;
   cursor: pointer;
-
   position: relative;
   z-index: 5;
-
   width: 100%;
-  height: 18rem;
   background-color: var(--primary-800);
 
   border-radius: 0.5rem;
+}
+.carousel-inner img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s ease
+}
+.image_container img {
+  object-fit:cover;
+  width: 100%;
+  height: 300px;
 }
 
 
 
 .title {
   overflow: clip;
-
   width: 100%;
-
   font-size: 1rem;
   font-weight: 600;
   color: var(--bg-card);
