--- a/app/users/Vista/CSS/estilo-footer.css
+++ b/app/users/Vista/CSS/estilo-footer.css
@@ -15,3 +15,13 @@ footer a {
     color: #fff;
     text-decoration: none;
   }
+.animate-footer {
+  position: relative;
+  animation: animatefooter 2s;
+}
+
+@keyframes animatefooter {
+  0% { transform: rotateX(-90deg) scale(0.1); opacity: 0; }
+  50% { transform: rotateX(0deg) scale(1.2); opacity: 1; }
+  100% { transform: rotateX(0deg) scale(1); opacity: 1; }
+}  
