--- a/app/users/Vista/CSS/estilo-index.css
+++ b/app/users/Vista/CSS/estilo-index.css
@@ -214,6 +214,26 @@
     }
   }
   /* ANIAMCION DE SCROLL CON MOVIENTO*/
+  .animate-footer {
+    position: relative;
+    animation: animatefooter 2s;
+  }
+  
+  @keyframes animatefooter {
+    0% { transform: rotateX(-90deg) scale(0.1); opacity: 0; }
+    50% { transform: rotateX(0deg) scale(1.2); opacity: 1; }
+    100% { transform: rotateX(0deg) scale(1); opacity: 1; }
+  }
+  .animate-card {
+    position: relative;
+    animation: animatecard 2s;
+  }
+  
+  @keyframes animatecard {
+    0% { transform: rotateY(-90deg) scale(0.1); opacity: 0; }
+    50% { transform: rotateY(0deg) scale(1.2); opacity: 1; }
+    100% { transform: rotateY(0deg) scale(1); opacity: 1; }
+  }
   .animate-right {
     position: relative;
     animation: animateright 2s;
