--- a/app/users/Vista/CSS/detalle-propiedad.css
+++ b/app/users/Vista/CSS/detalle-propiedad.css
@@ -63,6 +63,19 @@ html {
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: transparent;
 }
+.sticky {
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 30%;  /* Asegura que el elemento mantenga su ancho original */
+}
+@media (min-width: 992px) {
+    .sticky {
+        position: fixed;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+}
 
 .pb-4, .py-4 {
     padding-bottom: 1.5rem !important;
