--- a/app/admin/vista/CSS/listado-paises.css
+++ b/app/admin/vista/CSS/listado-paises.css
@@ -22,7 +22,7 @@ table {
 table th, td {
     border-collapse: collapse;
     padding: 1rem;
-    text-align: left;
+    text-align: center;
 }
 thead th {
     position: sticky;
