--- a/app/admin/vista/CSS/listado-tipo-propiedades.css
+++ b/app/admin/vista/CSS/listado-tipo-propiedades.css
@@ -23,7 +23,7 @@ table {
 table th, td {
     border-collapse: collapse;
     padding: 1rem;
-    text-align: left;
+    text-align: center;
 }
 thead th {
     position: sticky;
