--- a/app/users/Vista/CSS/estilo-index.css
+++ b/app/users/Vista/CSS/estilo-index.css
@@ -107,6 +107,7 @@
      
     }
   }
+  
   .buscador .contenedor-busqueda {
     background: rgba(255, 255, 255, 0.4);
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
@@ -193,6 +194,20 @@
     z-index: -1;
     margin-right: -160px;
     margin-left: -1235px;
+  }
+  @media (max-width: 600px) {
+    .subtitle-1 {
+      display: none;
+    }
+    .text-justify{
+      display: none;
+    }
+    .col-md-6.px-5.py-4.my-text {
+      display: none;
+    }
+    .container-fluid {
+      margin-top: -50px; 
+    }
   }
   .img-fluid {
     position: relative;
