--- a/app/users/Vista/CSS/estilo-index.css
+++ b/app/users/Vista/CSS/estilo-index.css
@@ -15,6 +15,24 @@
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
   }
+  .img-link {
+    position: relative;
+  }
+
+  .img-text {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* Black background con 50% de opacidad */
+    color: white;
+    padding: 10px;
+    z-index: 5;
+  }
+  @media (max-width: 768px) {
+    .col-md-6{
+      padding: 8px;
+    }
+  }
   .navbar {
     min-height: 5rem;
 
@@ -589,9 +607,12 @@
 }
 
 .logo {
-  width: 300px;
-  height: auto; 
+  width: auto;
+  height: 100px; 
 }
+
+
+
 
 .nav_links {
   display: flex;
